[tool.poetry]
name = "rai-perception"
# TODO, update the version once it is published to PyPi
version = "0.1.5"
description = "Package for object detection, segmentation and gripping point detection."
authors = ["Kajetan Rachwał <kajetan.rachwal@robotec.ai>"]
readme = "README.md"
packages = [
    { include = "rai_perception", from = "." },
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.3.1"
torchvision = "^0.18.1"
rf-groundingdino = "^0.2.0"
rai-gsam2 = "^1.1.2"
rai_core = ">=2.0.0.a2,<3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
