[project]
name = "rai-perception"
# TODO, update the version once it is published to PyPi
version = "0.2.2"
description = "Package for object detection, segmentation and gripping point detection."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Maciej Majek", email = "maciej.majek@robotec.ai" },
    { name = "Julia Jia", email = "juliajster@gmail.com" },
    { name = "Kajetan Rachwal", email = "kajetan.rachwal@robotec.ai" },
]
dependencies = [
    "torch>=2.3.1,<3.0.0",
    "torchvision>=0.18.1,<0.19.0",
    "rf-groundingdino>=0.2.0,<0.3.0",
    "rai-gsam2>=1.1.2,<2.0.0",
    "rai_core>=2.0.0a2,<3.0.0",
    "scikit-learn>=1.0.0,<1.4.0",
    "transformers<5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rai_perception"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
