[project]
name = "rai-perception"
version = "0.4.0"
description = "Package for object detection, segmentation and gripping point detection."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Maciej Majek", email = "maciej.majek@robotec.ai" },
    { name = "Julia Jia", email = "juliajster@gmail.com" },
    { name = "Kajetan Rachwal", email = "kajetan.rachwal@robotec.ai" },
]
dependencies = [
    "torch>=2.3.1,<3.0.0",
    "torchvision>=0.18.1",
    "rf-groundingdino>=0.2.0,<0.3.0",
    "rai-gsam2>=1.1.2,<2.0.0",
    "rai_core>=2.0.0a2,<3.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "transformers<5.0.0",
]

[project.scripts]
download-perception-models = "rai_perception.scripts.download_weights:main"

[tool.hatch.build.targets.wheel]
packages = ["rai_perception"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
